cmake_minimum_required(VERSION 3.8)
project(camera_autoview)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

install(
  DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)

install(
  PROGRAMS
    scripts/camera_fullscreen_viewer
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
