<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_autoview</name>
  <version>0.0.0</version>
  <description>Fullscreen Orbbec camera viewer for herelink workflows.</description>
  <maintainer email="yms9391@gmail.com">Hyunbaai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
