<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>herelink_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for driving LIMO Ultra from HereLink cmd_vel.</description>
  <maintainer email="yms9391@gmail.com">Hyunbaai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>camera_autoview</exec_depend>
  <exec_depend>limo_ultra_base</exec_depend>
  <exec_depend>herelink_sbus_cmd_vel</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
